--- a/css.css
+++ b/css.css
@@ -1,14 +1,16 @@
 /*notes
 -need to center navbar links
--need to make navbar background go above links
--need to add cool background to entire page?
--links aside and recent posts aside don't have same left border
--links aside links need to be spaced out 
+
 */
 
-/*body*/
+/*body*/ 
 
 body {
+  max-width: 1125px;
+  margin: auto;
+}
+
+#body {
   width: 90%;
   margin: auto;
   margin-top: 4px;
@@ -18,35 +20,41 @@ body {
 /*header*/
 
 header {
-  background-image: url("./images/background1.jpg");
+  background-image: url("./images/background.jpg");
   margin: auto;
   border-radius: 10px;
-  border: black solid 2px;
+  border: #E0E0E0 solid 1px;
   background-size: cover;
-  height: auto;
   margin-top: 2px;
   margin-bottom: 2px;
   text-align: center;
 }
 
 header img {
-  height: 200px;
   border-radius: 100px;
   box-shadow: 0px 0px 3px 3px rgba(0, 0, 0, 0.25);
-  border: white 3px solid;
+  border: #E0E0E0 1px solid;
+  width: 200px;
+  height: 200px;
+  margin: auto;
+  display: inline-block;
 }
 
 #profile {
-  margin: auto;
-  width: 200px;
   padding: 75px;
+  display: block;
 }
 
 /*navbar*/
 
+#navbar {
+  display: block;
+}
+
 nav li {
   list-style-type: none;
-  display: inline;
+  display: inline-block;
+  padding: 0px 50px;
 }
 
 nav ul {
@@ -56,11 +64,22 @@ nav ul {
 
 header nav {
   background-color: rgba(0, 0, 0, 0.5);
+  border-bottom-left-radius: 10px;
+  border-bottom-right-radius: 10px;
 }
 
-nav li a {
-  margin-left: 15px;
-  margin-right: 15px;
+nav a {
+  text-decoration: none;
+}
+
+nav a:link {
+  color: rgba(255, 255, 255, 0.75);
+  text-decoration: none;
+}
+
+nav a:visited {
+  color: rgba(255, 255, 255, 0.75);
+  text-decoration: none;
 }
 
 /*all h3s*/
@@ -75,13 +94,27 @@ aside li {
   list-style-type: none;
 }
 
+aside a {
+  text-decoration: none;
+}
+
+aside a:link {
+  color: rgba(0, 0, 0, 0.75);
+  text-decoration: none;
+}
+
+aside a:visited {
+  color: rgba(0, 0, 0, 0.75);
+  text-decoration: none;
+}
+
 /*about me*/
 
 section {
-  border: 2px solid black;
+  border: #E0E0E0 solid 1px;
   border-radius: 10px;
   margin: auto;
-  width: 68%;
+  width: 66%;
   float: left;
   margin-top: 2px;
   margin-bottom: 2px;
@@ -94,32 +127,35 @@ section p {
 /*links side bar*/
 
 #links {
-  border: 2px solid black;
+  border: #E0E0E0 solid 1px;
   border-radius: 10px;
   margin: auto;
-  width: 28%;
+  width: 30%;
   float: right;
   margin-top: 2px;
   margin-bottom: 2px;
-  padding: 5px;
 }
 
 /*blog summaries side bar*/
 
 #recent-posts {
-  border: 2px solid black;
+  border: #E0E0E0 solid 1px;
   border-radius: 10px;
   margin: auto;
-  width: 28%;
+  width: 30%;
   float: right;
   margin-top: 2px;
   margin-bottom: 2px;
 }
 
+#recent-posts li {
+  margin: 0px 30px 0 0;
+}
+
 /*footer*/
 
 footer {
-  border: 2px solid black;
+  border: #E0E0E0 solid 1px;
   border-radius: 10px;
   margin: auto;
   width: 100%;
@@ -129,29 +165,41 @@ footer {
   text-align: center;
 }
 
-/*all links*/
+/*media queries*/
 
-a {
-  text-decoration: none;
-  background: gray;
-  border: solid 1px black;
-  padding: 1px 15px;
-  margin: 2px 2px 2px 2px;
-  border-radius: 5px;
+@media only screen and (max-width: 700px) {
+  
+  section {
+    float: left;
+    width: 100%;
+    clear: both;
+  }
+
+  #links {
+    float: left;
+    width: 100%;
+    clear: both;
+  }
+
+  #recent-posts {
+    float: left;
+    width: 100%;
+    clear: both;
+  }
+
+  nav li {
+    padding: 0px 20px;
+  }
 }
 
-a:link {
-  color: blue;
-}
 
-a:visited {
-  color: blue;
-}
 
-a:hover {
-  color: navy;
-}
 
-a:active {
-  color: black;
-}
+
+
+
+
+
+
+
+
