--- a/blog.css
+++ b/blog.css
@@ -4,6 +4,70 @@ body {
   margin: auto;
 }
 
+/*asides*/
+
 aside {
   width: 33%;
+  border: 1px solid #E0E0E0;
+  border-radius: 10px;
+  margin: 4px 0px;
+  float: left;
+  clear: both;
+}
+
+#background {
+  background: url("./images/background.jpg");
+  background-position: center bottom;
+  background-repeat: no-repeat;
+  max-height: 360px;
+}
+
+aside img {
+  width: 200px;
+  height: 200px;
+  margin: auto 20%;
+  border-radius: 200px;
+  border: 1px solid #E0E0E0;
+  box-shadow: 0px 0px 3px 3px rgba(0, 0, 0, 0.25);
+  display: inline-block;
+}
+
+#recent-posts li {
+  list-style-type: none;
+}
+
+#recent-posts h3 {
+  text-align: center;
+}
+
+/*navbar*/
+
+nav {
+  text-align: center;
+  display: block;
+  background-color: rgba(0, 0, 0, 0.5);
+  background-position: center bottom;
+}
+
+nav li {
+  list-style-type: none;
+  display: inline-block;
+}
+
+section {
+  float: right;
+  width: 60%;
+  border: 1px solid #E0E0E0;
+  border-radius: 10px;
+  clear: both;
+  margin: 4px 0px;
+}
+
+/*footer*/
+
+footer {
+  border-radius: 10px;
+  border: 1px solid #E0E0E0;
+  text-align: center;
+  clear: both;
 }
