--- a/index.css
+++ b/index.css
@@ -16,7 +16,7 @@ body {
 
 header {
   background-image: url("./images/background.jpg");
-  background-position: center;
+  background-position: center bottom;
   margin: auto;
   border-radius: 10px;
   border: #E0E0E0 solid 1px;
@@ -24,20 +24,21 @@ header {
   margin-top: 2px;
   margin-bottom: 2px;
   text-align: center;
+  height: 260px;
 }
 
 header img {
   border-radius: 100px;
   box-shadow: 0px 0px 3px 3px rgba(0, 0, 0, 0.25);
   border: #E0E0E0 1px solid;
-  width: 200px;
-  height: 200px;
+  width: 150px;
+  height: 150px;
   margin: auto;
   display: inline-block;
 }
 
 #profile {
-  padding: 75px;
+  padding: 35px 0 46px 0;
   display: block;
 }
 
@@ -111,7 +112,7 @@ sub {
   float: left;
   padding-left: 150px;
   margin-bottom: 20px;
-  color: #E0E0E0;
+  color: #C0C0C0;
 }
 /*all aside lists*/
 
@@ -210,15 +211,4 @@ footer {
     padding: 0px 20px;
   }
 }
-
-
-
-
-
-
-
-
-
-
-
 
