--- a/blog.css
+++ b/blog.css
@@ -1,3 +1,15 @@
+/*universals*/
+
+sub {
+  color: #C0C0C0;
+  float: left;
+  padding: 4px 0 10px 0;
+}
+
+h3 {
+  text-align: center;
+}
+
 /*body*/ 
 
 body {
@@ -80,45 +92,6 @@ nav a:visited {
   text-decoration: none;
 }
 
-/*all h3s*/
-
-h3 {
-  text-align: center;
-}
-
-/*about me*/
-
-section {
-  border: #E0E0E0 solid 1px;
-  border-radius: 10px;
-  margin: auto;
-  width: 66%;
-  float: right;
-  margin-top: 2px;
-  margin-bottom: 2px;
-}
-
-section p {
-  margin: 20px 30px;
-}
-
-section img {
-  margin: 0px 30px 0px 30px;
-  display: inline-block;
-  width: 80%;
-}
-
-section sub {
-  margin-left: 30px;
-  margin-bottom: 10px;
-}
-
-sub {
-  color: #C0C0C0;
-  float: left;
-  padding: 4px 0 10px 0;
-}
-
 /*all aside lists*/
 
 aside sub {
@@ -147,13 +120,13 @@ aside a:visited {
   text-decoration: none;
 }
 
+/*links side bar*/
+
 #links img {
   height: 50px;
   width: 50px;
   float: left;
 }
-
-/*links side bar*/
 
 #links {
   border: #E0E0E0 solid 1px;
@@ -182,6 +155,33 @@ aside a:visited {
 #recent-posts li {
   margin: 0px 30px 0 0;
   clear: left;
+}
+
+/*sections*/
+
+section {
+  border: #E0E0E0 solid 1px;
+  border-radius: 10px;
+  margin: auto;
+  width: 66%;
+  float: right;
+  margin-top: 2px;
+  margin-bottom: 2px;
+}
+
+section p {
+  margin: 20px 30px;
+}
+
+section img {
+  margin: 0px 30px 0px 30px;
+  display: inline-block;
+  width: 80%;
+}
+
+section sub {
+  margin-left: 30px;
+  margin-bottom: 10px;
 }
 
 /*footer*/
