--- a/blog.css
+++ b/blog.css
@@ -188,6 +188,13 @@ section p {
   margin: 20px 30px;
 }
 
+.disclosure {
+  text-align: center;
+  color: #C0C0C0;
+  font-size: .75em;
+  font-style: italic;
+}
+
 section img {
   margin: 0px 30px 0px 30px;
   display: inline-block;
@@ -197,6 +204,40 @@ section img {
 section sub {
   margin-left: 30px;
   margin-bottom: 10px;
+}
+
+/*filetree blog post*/
+
+.indent_0 {
+  list-style-type: none;
+  padding-right: 30px;
+}
+
+.indent_1 {
+  list-style-position: inside;
+  padding-left: 10px;
+  padding-right: 30px;
+}
+
+.indent_2 {
+  padding-left: 30px;
+  padding-right: 30px;
+  list-style-position: inside;
+  list-style-type: square;
+  font-size: .85em;
+}
+
+.indent_3{
+  padding-left: 50px;
+  padding-right: 30px;
+  list-style-position: inside;
+  list-style-type: circle;
+  font-size: .85em;
+}
+
+#sources {
+  text-decoration: underline;
+  list-style-type: none;
 }
 
 /*footer*/
