--- a/blog.css
+++ b/blog.css
@@ -249,6 +249,15 @@ section li {
   padding: 0px 30px 0px 0px;
 }
 
+/*sql blog post*/
+
+section .select_statement {
+  list-style-type: none;
+  padding-left: 50px;
+  list-style-position: inside;
+  font-size: .85em;
+}
+
 /*footer*/
 
 footer {
