media query for about me section

--- a/index.css
+++ b/index.css
@@ -312,6 +312,11 @@ footer {
     clear: right;
   }
 
+  #about_me {
+    float: left;
+    width: 100%;
+  }
+
   #links {
     float: left;
     width: 100%;
