--- a/temp.css
+++ b/temp.css
@@ -60,6 +60,17 @@ header img {
   display: block;
 }
 
+nav li {
+  list-style-type: none;
+  display: inline-block;
+  padding: 0px 50px;
+}
+
+nav ul {
+  width: 100%;
+  margin: auto;
+}
+
 header nav {
   background-color: rgba(0, 0, 0, 0.5);
   border-bottom-left-radius: 10px;
@@ -69,7 +80,6 @@ header nav {
 nav a {
   text-decoration: none;
   font-size: 1.25em;
-  padding: 0px 75px 0px 75px;
 }
 
 nav a:link {
