--- a/index.css
+++ b/index.css
@@ -274,6 +274,10 @@ section li {
   padding: 0px 30px 0px 0px;
 }
 
+section dl {
+  margin: 0 30px;
+}
+
 /*sql blog post*/
 
 section .select_statement {
