--- a/rebuild-w-bootstrap/index.css
+++ b/rebuild-w-bootstrap/index.css
@@ -1,4 +1,30 @@
 body {
-  padding-top: 50px;
+  /*padding-top: 50px;*/
   padding-bottom: 20px;
+}
+
+.navbar-fixed-left {
+  width: 20%;
+  position: fixed;
+  border-radius: 0;
+  height: 100%;
+}
+
+.navbar-fixed-left .navbar-nav > li {
+  float: none;  /* Cancel default li float: left */
+  width: 139px;
+}
+
+.navbar-fixed-left + .container {
+  padding-left: 160px;
+}
+
+/* On using dropdown menu (To right shift popuped) */
+.navbar-fixed-left .navbar-nav > li > .dropdown-menu {
+  margin-top: -50px;
+  margin-left: 140px;
+}
+
+.container {
+  padding-left: 25%;
 }
