--- a/rebuild-w-bootstrap/index.css
+++ b/rebuild-w-bootstrap/index.css
@@ -26,5 +26,44 @@ body {
 }
 
 .container {
-  padding-left: 25%;
+  padding-left: 20%;
+}
+
+.panel-default>.panel-heading {
+  background-color: white;
+}
+
+#aboutme, #links, #twitter {
+  margin: 5%;
+  color: white;
+}
+
+.navbar.navbar-inverse.navbar-fixed-left {
+  padding-right: 0;
+}
+
+.panel.panel-default.col-md-4 {
+  width: 30%;
+  margin: 1%;
+}
+
+div.panel-body {
+  padding: 0;
+}
+
+div.panel-heading {
+  padding: 0;
+}
+
+div.panel-heading p {
+  margin: 0;
+}
+
+.panel-group .panel-heading+.panel-collapse>.list-group, .panel-group .panel-heading+.panel-collapse>.panel-body {
+  border-top: none;
+}
+
+h4.panel-title {
+  padding-top: 10px;
+  padding-bottom: 5px;
 }
