--- a/rebuild-w-bootstrap/index.css
+++ b/rebuild-w-bootstrap/index.css
@@ -5,9 +5,11 @@ body {
 
 .navbar-fixed-left {
   width: 20%;
+  min-width: 200px;
   position: fixed;
   border-radius: 0;
-  height: 100%;
+  height: auto;
+  margin-right: 5px;
 }
 
 .navbar-fixed-left .navbar-nav > li {
@@ -26,7 +28,7 @@ body {
 }
 
 .container {
-  padding-left: 20%;
+  padding-left: 20%; 
 }
 
 .panel-default>.panel-heading {
@@ -43,8 +45,12 @@ body {
 }
 
 .panel.panel-default.col-md-4 {
-  width: 30%;
+  width: 95%;
   margin: 1%;
+}
+
+div.panel {
+  box-shadow: none;
 }
 
 div.panel-body {
