--- a/index.css
+++ b/index.css
@@ -1,31 +1,44 @@
 
+
 body {
   margin: 0;
   padding: 0;
-  background-color: #eee;
+  background-color: #eeeeee;
+}
+
+.navbar {
+  color: white;
+  background-color: #0c0e1b;
+  left: 0;
+}
+
+.jumbotron {
+  margin-top: 5px;
+  background-color: #ffffff;
+  border-radius: 10px;
+  border-top: 5px solid #8b9db8;
+  border-bottom: 5px solid #8b9db8;
 }
 
 li {
   list-style-type: none;
 }
 
+#final-proj li {
+  list-style-type: circle;
+}
+
 a {
   text-decoration: none;
 }
 
-.navbar {
-  color: white;
-}
-
 .navbar-left {
-  position: fixed;
   top: 0;
-  left: 0;
+  position: fixed;
   margin: 0;
   padding: 0;
   width: 20%;
   height: 100%;
-  background-color: #222;
 }
 
 .navbar-left img {
@@ -34,44 +47,37 @@ a {
   border: #E0E0E0 2px solid;
   width: 70%;
   height: auto;
-  margin: 10% auto 10% 10px;
+  margin: 10% auto 10% auto;
   display: block;
 }
 
 .navbar-top {
-  background-color: #222;
   width: 100%;
-  min-height: 220px;
-  position: absolute;
-  top: 0;
-}
-
-.navbar-top p, .navbar-top sub {
-  /*float: right;*/
-  padding-bottom: 5px;
-  top: 75px;
-  left: 100px;
+  position: static;
 }
 
 .navbar-top img {
   border-radius: 100px;
   border: #E0E0E0 2px solid;
-  margin: 25px;
+  margin: 5px;
   height: 100px;
   width: auto;
   float: left;
 }
 
 .navbar h5 {
-  margin: 10px 0 0 10px;
+  padding: 5px;
+  margin: 0;
 }
 
 .navbar .local-links a {
-  margin: 0 5% 0 10px;
+  margin: 0 10px 0 10px;
 }
 
 .navbar p {
   margin: auto;
+  clear: left;
+  padding: 5px;
 }
 
 .navbar .external-links a img {
@@ -88,16 +94,101 @@ a {
 
 .content-bottom {
   width: 90%;
-  margin: 230px 5% 0px 5%;
+  margin: 0px 5% 0px 5%;
+  padding-top: 20px;
 }
 
-.jumbotron {
-  background-color: white;
+.footer {
+  /*margin-left: 35%;*/
+  clear: both;
+  margin-top: 60px;
+  border-radius: 10px;
+  border-top: 5px solid #8b9db8;
+  border-bottom: 5px solid #8b9db8;
+  text-align: center;
+  background-color: #ffffff;
 }
 
-.footer p {
-  margin-left: 35%;
+.jumbotron img {
+  width: 90%;
+  max-width: 500px;
+  display: block;
+  padding-top: 10px;
+  margin: 10px auto;
 }
+
+.posts .right {
+  display: block;
+  float: right;
+  max-height: 200px;
+  padding-left: 10px;
+}
+
+.posts .left {
+  display: block;
+  float: left;
+  padding-right: 10px;
+  max-height: 200px;
+}
+
+.posts {
+  clear: both;
+  padding: 5px 5px 30px 5px;
+}
+
+.jumbotron p, .jumbotron h3, .jumbotron sub {
+  padding-left: 5px;
+  padding-right: 5px;
+}
+
+.jumbotron button {
+  margin: 5px;
+}
+
+.dent_0 {
+  list-style-type: none;
+  padding-right: 30px; 
+}
+
+.dent_1 {
+  list-style-type: none;
+  padding-left: 10px;
+  padding-right: 30px;
+}
+
+.dent_2 {
+  list-style-type: none;
+  padding-left: 20px;
+  padding-right: 30px;
+}
+
+.indent_0 {
+  list-style-type: none;
+  padding-right: 30px;
+}
+
+.indent_1 {
+  list-style-position: inside;
+  padding-left: 10px;
+  padding-right: 30px;
+}
+
+.indent_2 {
+  padding-left: 30px;
+  padding-right: 30px;
+  list-style-position: inside;
+  list-style-type: square;
+  font-size: .85em;
+}
+
+.indent_3{
+  padding-left: 50px;
+  padding-right: 30px;
+  list-style-position: inside;
+  list-style-type: circle;
+  font-size: .85em;
+}
+
 
 
 
