--- a/index.css
+++ b/index.css
@@ -165,18 +165,20 @@ a {
   float: right;
   max-height: 200px;
   padding-left: 10px;
+  padding-bottom: 20px;
 }
 
 .posts .left {
   display: block;
   float: left;
   padding-right: 10px;
+  padding-bottom: 20px;
   max-height: 200px;
 }
 
 .posts {
   clear: both;
-  padding: 0px 5px 30px 5px;
+  padding: 0px 5px;
   border-top: 1px solid #bbbbbb;
   margin: 5px 0;
 }
@@ -245,5 +247,11 @@ a {
   padding-left: 2%;
 }
 
+.gist {
+  clear: both;
+}
 
+sub {
+  color: grey;
+}
 
